kube/components/aix/kubernetes/moat/aix-moat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moat
  namespace: aix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moat
  template:
    metadata:
      labels:
        app: moat
    spec:
      containers:
        - name: api
          image: moat:0.22.2
          imagePullPolicy: IfNotPresent
          command: ["/app/entrypoint.sh"]
          args: ["start-server"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: moat-api-config
              mountPath: /opt/moat
              readOnly: true
            - name: moat-config-trino-policy
              mountPath: /opt/moat/trino
              readOnly: true
            - name: bundle-storage
              mountPath: /opt/moat/bundles
        - name: worker
          image: moat:0.22.2
          imagePullPolicy: IfNotPresent
          command: ["/app/entrypoint.sh"]
          args: ["start-worker"]
          volumeMounts:
            - name: moat-api-config
              mountPath: /opt/moat
              readOnly: true
            - name: moat-config-trino-policy
              mountPath: /opt/moat/trino
              readOnly: true
            - name: bundle-storage
              mountPath: /opt/moat/bundles
      volumes:
        - name: moat-api-config
          configMap:
            name: moat-api-config
        - name: moat-config-trino-policy
          configMap:
            name: moat-config-trino-policy
        - name: bundle-storage
          emptyDir: {}
