kube/components/aix/kubernetes/moat/aix-moat-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aix-moat-ingress-policy
  namespace: aix
spec:
  podSelector:
    matchLabels:
      app: moat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: opa
      ports:
        - protocol: TCP
          port: 8000
